# hecs-component-provider

./: Cargo.toml  README.md
hecs-component-provider-macros/: Cargo.toml
hecs-component-provider-macros/src/: component_provider.rs  default_trait_impl.rs  lib.rs  query_component_provider.rs  self_component_provider.rs
src/: lib.rs
tests/: macros.rs
