[package]
name = "hecs-component-provider"
version = "0.1.0"
authors = ["Tobias Mansfield-Williams <contact@tmwhere.com>"]
repository = "https://github.com/t-mw/hecs-component-provider"
license = "MIT"
edition = "2018"

[dependencies]
gensym = "0.1"
hecs = { version = "> 0.3.0", features = ["macros"] }
hecs-component-provider-macros = { version = "=0.1.0", path = "hecs-component-provider-macros" }

[workspace]
members = ["hecs-component-provider-macros"]