[package]
name = "hecs-component-provider"
version = "0.2.0"
authors = ["Tobias Mansfield-Williams <contact@tmwhere.com>"]
repository = "https://github.com/t-mw/hecs-component-provider"
description = "Easily define behavior for sets of components when using the hecs ECS library."
keywords = ["hecs", "ecs"]
categories = ["game-development"]
license = "MIT"
edition = "2018"

[dependencies]
gensym = "0.1"
hecs = { version = "> 0.3.0", features = ["macros"] }
hecs-component-provider-macros = { version = "=0.2.0", path = "hecs-component-provider-macros" }

[workspace]
members = ["hecs-component-provider-macros"]