[package]
name = "hecs-component-provider-macros"
version = "0.1.0"
authors = ["Tobias Mansfield-Williams <contact@tmwhere.com>"]
repository = "https://github.com/t-mw/hecs-component-provider"
description = "Internal code for an extension to the hecs ECS library. Use https://crates.io/crates/hecs-component-provider in your code."
license = "MIT"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
itertools = "0.9"
proc-macro2 = "1.0.29"
quote = "1.0.9"
syn = { version = "1.0.76", features = ["full", "visit", "visit-mut"] }
unzip-n = "0.1"
